RESOLVED FIXED48602
Crash triggered by incremental layout of block truncated by line-clamp
https://bugs.webkit.org/show_bug.cgi?id=48602
Summary Crash triggered by incremental layout of block truncated by line-clamp
mitz
Reported 2010-10-28 17:39:14 PDT
<rdar://problem/8597430> Patch forthcoming.
Attachments
Clear truncation from clamped children even if they need layout (3.69 KB, patch)
2010-10-28 17:44 PDT, mitz
simon.fraser: review+
mitz
Comment 1 2010-10-28 17:44:03 PDT
Created attachment 72272 [details] Clear truncation from clamped children even if they need layout
mitz
Comment 2 2010-10-28 19:36:35 PDT
Note You need to log in before you can comment on or make changes to this bug.