<rdar://problem/8597430> Crash triggered by incremental layout of block truncated by line-clamp https://bugs.webkit.org/show_bug.cgi?id=48602

Reviewed by Simon Fraser.

WebCore:

Test: fast/flexbox/line-clamp-crash.html

* rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::applyLineClamp): Even if the child needs layout, call clearTruncation(),
since layout itself may be partial and not touch the truncated line (but touch its markup box).

LayoutTests:

* fast/flexbox/line-clamp-crash-expected.txt: Added.
* fast/flexbox/line-clamp-crash.html: Added.



Canonical link: https://commits.webkit.org/61344@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70834 268f45cc-cd09-0410-ab3c-d52691b4dbfc