WebCore/rendering/RenderFlexibleBox.cpp
@@ -918,7 +918,7 @@ void RenderFlexibleBox::applyLineClamp(FlexBoxIterator& iterator, bool relayoutC
             continue;
 
         if (relayoutChildren || (child->isReplaced() && (child->style()->width().isPercent() || child->style()->height().isPercent()))
-            || (child->style()->height().isAuto() && child->isBlockFlow() && !child->needsLayout())) {
+            || (child->style()->height().isAuto() && child->isBlockFlow())) {
             child->setChildNeedsLayout(true, false);
 
             // Dirty all the positioned objects.
